# cleanroom

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
dashboard/: Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json
dashboard/src/: App.tsx  main.tsx
infra/: prometheus.yml
infra/helm/: Chart.yaml  (+1 more)
installer/: install.sh
landing/: index.html
scripts/: demo.py  gen_certs.sh
server/: Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: b552e6cff8dd_initial_schema.py
server/src/: auth.py  config.py  database.py  hardware.py  http.py  main.py
server/src/agent/: __init__.py  engine.py  tools.py
server/src/api/: admin.py  agent_router.py  audit.py  auth_router.py  chat.py  code.py  control.py  hardware_router.py  health.py  insights.py  models_router.py  projects.py  prompts.py  scheduled.py  search.py  tenant.py  workflows.py
server/src/connectors/: __init__.py  base.py  filesystem.py  registry.py  sql.py
server/src/models/: __init__.py  audit_log.py
server/src/tasks/: scheduler.py
server/src/workflows/: engine.py
server/src/workflows/templates/: contract_review.yaml  financial_summary.yaml  meeting_summary.yaml  policy_lookup.yaml
server/tests/: conftest.py  test_admin.py  test_agent_hardware.py  test_chat.py  test_code.py  test_control.py  test_integration.py  test_personal_workspace.py  test_projects.py  test_prompts_search_insights.py  test_tenant.py  test_workflows.py
(+54 files in other folders)
